update variational bayes; fix mathjax overflow small screens

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -523,3 +523,14 @@ p.page__date {
     }
   }
 }
+
+/*
+  Mathjax
+  =========================================================================== */
+.MathJax,
+.MathJax_Display {
+  overflow-x: auto;
+  overflow-y: hidden;
+  // padding-bottom: 250px; 
+  // margin-bottom: -250px;
+}
